HL.java
/* HL.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. HL.java */
public class HL/*@bgen(jjtree)*/implements HLTreeConstants, HLConstants {/*@bgen(jjtree)*/
  protected static JJTHLState jjtree = new JJTHLState();

//==================================================================
//                         P A R S E R
//==================================================================

//------------------------    STATEMENTS, BODIES AND CLAUSES -----------------------------------

// ------------------------------- BEGINNING -----------------------------------
  static final public 
SimpleNode start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case VBAR:
    case LROUND:
    case LCURLY:
    case LSQUARE:
    case FOR:
    case FUNCTION:
    case IF:
    case PRINT:
    case PRINTLN:
    case RETURN:
    case VAR:
    case WHILE:
    case NUMBER:
    case IDNUM:
    case IDSET:
    case IDBOOL:{
      S();
{if ("" != null) return (SimpleNode) (jjtree.popNode());}
      break;
      }
    case 0:{
      jj_consume_token(0);
{if (true) throw new ParseException("End of File.");}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public void S() throws ParseException, ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FOR:
    case FUNCTION:
    case IF:
    case PRINT:
    case PRINTLN:
    case RETURN:
    case VAR:
    case WHILE:{
      statement_LL1();
      jj_consume_token(SEMICOL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2147483647)) {
        assign_stat();
        jj_consume_token(SEMICOL);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:
        case VBAR:
        case LROUND:
        case LCURLY:
        case LSQUARE:
        case NUMBER:
        case IDNUM:
        case IDSET:{
          expression();
          jj_consume_token(SEMICOL);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

//------------------------    STATEMENTS, BODIES AND CLAUSES -----------------------------------

// These are all the statements which can be differentiated from each other 
// with a single lookahead
  static final public 
void statement_LL1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      var_decl();
      break;
      }
    case FUNCTION:{
      fn_decl();
      break;
      }
    case RETURN:{
      return_stat();
      break;
      }
    case PRINT:{
      print_stat();
      break;
      }
    case PRINTLN:{
      println_stat();
      break;
      }
    case IF:{
      if_stat();
      break;
      }
    case FOR:{
      for_stat();
      break;
      }
    case WHILE:{
      while_stat();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FOR:
    case FUNCTION:
    case IF:
    case PRINT:
    case PRINTLN:
    case RETURN:
    case VAR:
    case WHILE:{
      statement_LL1();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_2(2)) {
        fn_call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDNUM:
        case IDSET:
        case IDBOOL:{
          assign_stat();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  static final public void body() throws ParseException {/*@bgen(jjtree) body */
  ASTbody jjtn000 = new ASTbody(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FOR:
        case FUNCTION:
        case IF:
        case PRINT:
        case PRINTLN:
        case RETURN:
        case VAR:
        case WHILE:
        case IDNUM:
        case IDSET:
        case IDBOOL:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_1;
        }
        statement();
        jj_consume_token(SEMICOL);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void clause() throws ParseException {/*@bgen(jjtree) clause */
  ASTclause jjtn000 = new ASTclause(JJTCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        statement();
        jj_consume_token(SEMICOL);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FOR:
        case FUNCTION:
        case IF:
        case PRINT:
        case PRINTLN:
        case RETURN:
        case VAR:
        case WHILE:
        case IDNUM:
        case IDSET:
        case IDBOOL:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

//---------------------------   DECLARATIONS ------------------------------------------------
  static final public 
void var_decl() throws ParseException {
    jj_consume_token(VAR);
    var_list();
}

  static final public void var_list() throws ParseException {
ASTvar_decl jjtn001 = new ASTvar_decl(JJTVAR_DECL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
    try {
      identifier();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        identifier();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
    }
HLSymbTab currentTable = Scope.currentScope();

        for (int i = 0; i < jjtree.peekNode().jjtGetNumChildren(); i++) {
            ASTidentifier childNode = (ASTidentifier) jjtree.peekNode().jjtGetChild(i);
            Integer key = (Integer) childNode.jjtGetValue();

            HLSymbTabEntry entry = new HLSymbTabEntry(key.intValue(), IdentifierToken.getType(key));
            currentTable.addEntry(entry);


        }
}

  static final public void fn_decl() throws ParseException {/*@bgen(jjtree) fn_decl */
  ASTfn_decl jjtn000 = new ASTfn_decl(JJTFN_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCTION);
      identifier();
SimpleNode node = (SimpleNode) jjtree.peekNode();
                Integer Mainkey = (Integer) node.jjtGetValue();

                HLSymbTab currentTable = Scope.currentScope();

                int newTableId = currentTable.getTableId() + 1;
                HLSymbTab newTable = new HLSymbTab(newTableId);
                HLSymbTabEntry entry = new HLSymbTabEntry(Mainkey.intValue(), IdentifierToken.getType(Mainkey));
                currentTable.addEntry(entry);
                entry.setScope(newTableId);
      jj_consume_token(LROUND);
      ident_list();
      jj_consume_token(RROUND);
node = (SimpleNode) jjtree.peekNode();

        for (int i = 0; i < node.jjtGetNumChildren(); i++) {
            ASTidentifier childNode = (ASTidentifier) node.jjtGetChild(i);
            Integer key = (Integer) childNode.jjtGetValue();

            // Add the identifier to the symbol table (example)
            entry.addParam(key);
            HLSymbTabEntry newTableEntry = new HLSymbTabEntry(key.intValue(), IdentifierToken.getType(key));
            newTable.addEntry(newTableEntry);

        }
           Scope.pushScope(newTable);

           LocalScope.addScope(newTable, newTableId,Mainkey, entry.getParamSize() );
      body();
entry.setBody( (SimpleNode) jjtree.peekNode());
      jj_consume_token(END);
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
Scope.popScope();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void ident_list() throws ParseException {/*@bgen(jjtree) ident_list */
  ASTident_list jjtn000 = new ASTident_list(JJTIDENT_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:
      case IDSET:
      case IDBOOL:{
        identifier();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          identifier();
        }
        break;
        }
      default:
        jj_la1[10] = jj_gen;
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;

      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void identifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDNUM:{
      idnum();
      break;
      }
    case IDSET:{
      idset();
      break;
      }
    case IDBOOL:{
      idbool();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//---------------------------   FUNCTION CALLS AND RETURNS ----------------------------------
// parameter and return values can be numbers, sets, or booleans
  static final public 
void fn_call() throws ParseException {/*@bgen(jjtree) fn_call */
  ASTfn_call jjtn000 = new ASTfn_call(JJTFN_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:{
        idnum();
        jj_consume_token(LROUND);
        value_list();
        jj_consume_token(RROUND);
        break;
        }
      case IDSET:{
        idset();
        jj_consume_token(LROUND);
        value_list();
        jj_consume_token(RROUND);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void boolean_call() throws ParseException {/*@bgen(jjtree) boolean_call */
  ASTboolean_call jjtn000 = new ASTboolean_call(JJTBOOLEAN_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      idbool();
      jj_consume_token(LROUND);
      value_list();
      jj_consume_token(RROUND);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void value_list() throws ParseException {/*@bgen(jjtree) value_list */
  ASTvalue_list jjtn000 = new ASTvalue_list(JJTVALUE_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case VBAR:
      case NOT:
      case LROUND:
      case LCURLY:
      case LSQUARE:
      case TRUE:
      case FALSE:
      case NUMBER:
      case IDNUM:
      case IDSET:
      case IDBOOL:{
        value();
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
          value();
        }
        break;
        }
      default:
        jj_la1[14] = jj_gen;
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;

      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void return_stat() throws ParseException {/*@bgen(jjtree) Return */
  ASTReturn jjtn000 = new ASTReturn(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      value();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void value() throws ParseException {
    if (jj_2_3(2147483647)) {
      condition();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case VBAR:
      case LROUND:
      case LCURLY:
      case LSQUARE:
      case NUMBER:
      case IDNUM:
      case IDSET:{
        expression();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

//---------------------------   MISCELLANEOUS STATEMENTS ----------------------------------
  static final public 
void assign_stat() throws ParseException {/*@bgen(jjtree) Assign */
  ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDNUM:{
        idnum();
        jj_consume_token(ASSIGN);
        expression();
        break;
        }
      case IDSET:{
        idset();
        jj_consume_token(ASSIGN);
        expression();
        break;
        }
      case IDBOOL:{
        idbool();
        jj_consume_token(ASSIGN);
        condition();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void print_stat() throws ParseException {/*@bgen(jjtree) Print */
  ASTPrint jjtn000 = new ASTPrint(JJTPRINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINT);
      print_list();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void println_stat() throws ParseException {/*@bgen(jjtree) Println */
  ASTPrintln jjtn000 = new ASTPrintln(JJTPRINTLN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINTLN);
      println_list();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  static final public void println_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:
    case VBAR:
    case NOT:
    case LROUND:
    case LCURLY:
    case LSQUARE:
    case TRUE:
    case FALSE:
    case NUMBER:
    case IDNUM:
    case IDSET:
    case IDBOOL:
    case STRING:{
      print_list();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
ASTprint_list jjtn001 = new ASTprint_list(JJTPRINT_LIST);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
jjtree.closeNodeScope(jjtn001, true);
    jjtc001 = false;

      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    }
}
